2024-01-20T16:19:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7595492419 # 41
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-20
* notice: last 14d: unq all: 11 44
* notice: prev accum: outdated-unq outdated-all / unq all: 537 2816 / 549 2848
* notice: next accum: outdated-unq outdated-all / unq all: 537 2816 / 550 2860
* notice: prev exec diff / last date diff / accum: unq all: +1 +12 -0 -0 / +1 +12 -0 -0 / 1 12
* notice: removed / changed dates: [] / [2024-01-20]

2024-01-20T01:08:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7591073027 # 39
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-20
* notice: last 14d: unq all: 10 32
* notice: prev accum: outdated-unq outdated-all / unq all: 534 2805 / 548 2847
* notice: next accum: outdated-unq outdated-all / unq all: 537 2816 / 549 2848
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-01-05] / [2024-01-19]

2024-01-18T16:19:39Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7572901497 # 35
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-18
* notice: last 14d: unq all: 13 42
* notice: prev accum: outdated-unq outdated-all / unq all: 532 2800 / 548 2847
* notice: next accum: outdated-unq outdated-all / unq all: 534 2805 / 548 2847
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-04] / []

2024-01-18T01:09:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7563888090 # 33