@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-20T16:19:09Z",
-  "count" : 12,
-  "count_minmax" : [ 12, 12 ],
-  "count_decinc" : [ -0, +12 ],
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
-  "uniques_decinc" : [ -0, +1 ]
+  "timestamp" : "2024-01-21T01:14:40Z",
+  "count" : 14,
+  "count_minmax" : [ 12, 14 ],
+  "count_decinc" : [ -0, +14 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -0, +2 ]
 }
