@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-20T16:19:09Z",
+  "timestamp" : "2024-01-21T01:14:40Z",
   "count_outdated" : 2816,
   "uniques_outdated" : 537,
-  "count" : 2860,
-  "uniques" : 550,
+  "count" : 2862,
+  "uniques" : 551,
   "views" : [
     {
       "timestamp": "2024-01-09T00:00:00Z",
@@ -79,12 +79,12 @@
     },
     {
       "timestamp": "2024-01-20T00:00:00Z",
-      "count": 12,
-      "count_minmax": [ 12, 12 ],
-      "count_decinc": [ 0, 12 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 14,
+      "count_minmax": [ 12, 14 ],
+      "count_decinc": [ 0, 14 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
