@@ -1,6 +1,6 @@
 {
-  "count": 44,
-  "uniques": 11,
+  "count": 46,
+  "uniques": 12,
   "views": [
     {
       "timestamp": "2024-01-09T00:00:00Z",
@@ -44,8 +44,8 @@
     },
     {
       "timestamp": "2024-01-20T00:00:00Z",
-      "count": 12,
-      "uniques": 1
+      "count": 14,
+      "uniques": 2
     }
   ]
 }
