@@ -1,3 +1,12 @@
+2024-01-21T01:14:40Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7598037504 # 42
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-21
+* notice: last 14d: unq all: 12 46
+* notice: prev accum: outdated-unq outdated-all / unq all: 537 2816 / 550 2860
+* notice: next accum: outdated-unq outdated-all / unq all: 537 2816 / 551 2862
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +14 -0 -0 / 2 14
+* notice: removed / changed dates: [] / [2024-01-20]
+
 2024-01-20T16:19:09Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7595492419 # 41
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-20
